renamed megu staff

--- a/src/main/resources/assets/patriot/lang/en_us.lang
+++ b/src/main/resources/assets/patriot/lang/en_us.lang
@@ -1,4 +1,4 @@
 item.patriot:item_patriot.name=The One And Only Patriot
-item.patriot:item_meguminstaff.name=Black Staff of Explosion
+item.patriot:item_megumin_staff.name=Black Staff of Explosion
 
 itemGroup.patriot=Patriot
