--- a/src/main/resources/assets/patriot/lang/en_us.lang
+++ b/src/main/resources/assets/patriot/lang/en_us.lang
@@ -1,5 +1,6 @@
 item.patriot:item_patriot.name=The One And Only Patriot
 item.patriot:item_megumin_staff.name=Black Staff of Explosion
+item.patriot:item_magic_cloth.name=Magic Cloth
 item.patriot:armor_megumin_hat.name=Megumin Hat
 item.patriot:armor_megumin_chest.name=Megumin Chest
 item.patriot:armor_megumin_skirt.name=Megumin Skirt
