--- a/src/main/resources/assets/patriot/lang/en_us.lang
+++ b/src/main/resources/assets/patriot/lang/en_us.lang
@@ -1,6 +1,6 @@
 item.patriot:item_patriot.name=The One And Only Patriot
-item.patriot:item_toilet_paper=Toilet Paper
-item.patriot:item_tissue_box=Tissue Box
+item.patriot:item_toilet_paper.name=Toilet Paper
+item.patriot:item_tissue_box.name=Tissue Box
 item.patriot:item_megumin_staff.name=Black Staff of Explosion
 item.patriot:item_magic_cloth.name=Magic Cloth
 item.patriot:item_megumin_staff_core.name=Magical Core of Explosion
